--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>This is a big heading</h1>
-<p>This is a paragraph element</p>
-<a href="https://google.com" target="_blank">Click this here link!</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test Page</title>
+</head>
+<body>
+	<h1>This is a big heading</h1>
+	<p>This is a <i>paragraph</i> element</p>
+	<a href="https://google.com" target="_blank" title="Lets go to google">Click this here link!</a>
+	<p>This is a texture of:<br>
+	Tommy Vercetti</p>
+	<img src="img/army.jpg">
+</body>
+</html>
