--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>This is a big heading</h1>
-	<p>This is a <i>paragraph</i> element</p>
+	<p>This is a <i>paragraph</i> <b>element</b></p>
 	<a href="https://google.com" target="_blank" title="Lets go to google">Click this here link!</a>
 	<p>This is a texture of:<br>
 	Tommy Vercetti</p>
