added our characters index.html file and some images
wrote the html and and a favicon

--- a/index.html
+++ b/index.html
@@ -1,14 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Test Page</title>
+	<title>Batman</title>
+	<link rel="icon" href="img/batman-avatar.jpg">
 </head>
 <body>
-	<h1>This is a big heading</h1>
-	<p>This is a <i>paragraph</i> <b>element</b></p>
-	<a href="https://google.com" target="_blank" title="Lets go to google">Click this here link!</a>
-	<p>This is a texture of:<br>
-	Tommy Vercetti</p>
-	<img src="img/army.jpg">
+	<!-- header element -->
+	<header>
+		<img src="img/batman-avatar.jpg">
+		<h1>Batman</h1>
+	</header>
+
+	<!-- main element -->
+	<main>
+		<h2>About Batman</h2>
+		<p>Batman is a hero who resides on the outskirts of Gotham City. After witnessing the murder of his parents, he became who he was and stared to seek justice against criminals.</p>
+		<img src="img/batman-dc-comics.jpg">
+		<p>The Batman</p>
+		
+		<!-- Facts -->
+		<h2>Facts about The Batman</h2>
+		<ol>
+			<li>Batman first appeared in comics on March 30th, 1939.</li>
+			<li>Batman's secret identity is Bruce Wayne, a wealthy American playboy, philanthropist, and owner of Wayne Enterprises.</li>
+			<li>Batman does not possess any inhuman superpowers. He does, however, possess a genius-level intellect and is a peerless martial artist, and his vast wealth affords him an extraordinary arsenal of weaponry and equipment.</li>
+			<li>A large assortment of villains make up Batman's rogues gallery, including his nemesis, the Joker.</li>
+		</ol>
+
+		<!-- Supporting Characters -->
+		<h2>Batman's Supporting Characters</h2>
+		<p>Batman has alot of supporting characters that help him out greatly along the way.
+		Click on the links below to read more about them:</p>
+		<ul>
+			<li><a target="_blank" href="https://en.wikipedia.org/wiki/Alfred_Pennyworth">Alfred Pennyworth</a></li>
+			<li><a target="_blank" href="https://en.wikipedia.org/wiki/Robin_(character)">Robin</a></li>
+			<li><a target="_blank" href="https://en.wikipedia.org/wiki/Catwoman">Catwoman</a></li>
+			<li><a target="_blank" href="https://en.wikipedia.org/wiki/James_Gordon_(comics)">GCPD Commissioner James "Jim" Gordon</a></li>
+		</ul>
+
+
+	</main>
+
+	<!-- Footer Element -->
+	<footer>
+		<p>This site was created during a class on <a target="_blank" href="https://skillshare.com">Skillshare.com</a> &copy; LGNDX</p>
+	</footer>
+
 </body>
 </html>
