changed main batman picture

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<!-- header element -->
 	<header>
-		<img src="img/batman-avatar.jpg">
+		<img src="img/batman2016.png">
 		<h1>Batman</h1>
 	</header>
 
