--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Batman</title>
+	<title>The Batman</title>
 	<link rel="icon" href="img/batman-avatar.jpg">
 </head>
 <body>
 	<!-- header element -->
 	<header>
 		<img src="img/batman2016.png">
-		<h1>Batman</h1>
+		<h1>The Batman</h1>
 	</header>
 
 	<!-- main element -->
