Wrote the CSS for the hero website (and changed some HTML)

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 	<title>The Batman</title>
-	<link rel="icon" href="img/batman-avatar.jpg">
+	<link rel="icon" href="img/batman2016.png">
+	<link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/batman.css">
 </head>
 <body>
 	<!-- header element -->
 	<header>
-		<img src="img/batman2016.png">
+		<img src="img/batman-avatar.jpg">
 		<h1>The Batman</h1>
 	</header>
 
@@ -16,7 +18,7 @@
 		<h2>About Batman</h2>
 		<p>Batman is a hero who resides on the outskirts of Gotham City. After witnessing the murder of his parents, he became who he was and stared to seek justice against criminals.</p>
 		<img src="img/batman-dc-comics.jpg">
-		<p>The Batman</p>
+		<p class="caption">-The Batman in action.</p>
 		
 		<!-- Facts -->
 		<h2>Facts about The Batman</h2>
