--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>The Batman</title>
+	<title>The Batman!</title>
 	<link rel="icon" href="img/batman2016.png">
 	<link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/batman.css">
